catkin_ws/logs/firefly_control/build.make.180.log.stderr
/home/chris/catkin_ws/src/firefly_control/src/control.cpp: In member function ‘void control_fly::callback_tag(const ConstPtr&)’:
/home/chris/catkin_ws/src/firefly_control/src/control.cpp:22:16: error: cannot convert ‘const _id_type {aka const std::vector<int>}’ to ‘int’ in assignment
             id = msg->detections[0].id;
                ^
make[2]: *** [CMakeFiles/control.dir/src/control.cpp.o] Error 1
make[1]: *** [CMakeFiles/control.dir/all] Error 2
make: *** [all] Error 2
